--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,13 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/users_db?useSSL=false
+## local db
+#spring.datasource.url=jdbc:mysql://localhost:3306/users_db?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=Bhaskar@2
+
+#AWS My SQL db Connection
+spring.datasource.url=jdbc:mysql://firstawsaccount.cjznt7yaol6c.us-east-1.rds.amazonaws.com:3306/users_db?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=Bhaskar@2
+spring.datasource.password=Bhaskar234
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ## Hibernate Properties
@@ -9,3 +16,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
+
+server.port=5000
